#68 CreateGame PopuUps with stylesheet to prevent weird symbols

--- a/src/main/resources/views/gameSettings.fxml
+++ b/src/main/resources/views/gameSettings.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.GameSettingsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.GameSettingsController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="Game Settings" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
@@ -30,7 +30,7 @@
                         <Insets top="25.0" />
                      </HBox.margin>
                   </Text>
-                  <Button mnemonicParsing="false" onMouseClicked="#decreaseLetter" prefHeight="34.0" prefWidth="34.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="&lt;">
+                  <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#decreaseLetter" prefHeight="37.0" prefWidth="37.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="&lt;">
                      <HBox.margin>
                         <Insets left="68.0" top="20.0" />
                      </HBox.margin>
@@ -38,12 +38,15 @@
                         <Font name="Chalkboard" size="18.0" />
                      </font>
                   </Button>
-                  <TextField fx:id="letter" prefHeight="27.0" prefWidth="30.0" text="A">
+                  <TextField fx:id="letter" alignment="CENTER" prefHeight="27.0" prefWidth="30.0" text="A">
                      <HBox.margin>
                         <Insets left="10.0" right="10.0" top="25.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="Chalkboard" size="13.0" />
+                     </font>
                   </TextField>
-                  <Button mnemonicParsing="false" onMouseClicked="#increaseLetter" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="&gt;">
+                  <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#increaseLetter" prefHeight="37.0" prefWidth="37.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="&gt;">
                      <HBox.margin>
                         <Insets top="20.0" />
                      </HBox.margin>
@@ -60,25 +63,25 @@
                         <Font name="Chalkboard" size="24.0" />
                      </font>
                   </Text>
-                  <Button mnemonicParsing="false" onMouseClicked="#decreaseValue" prefHeight="34.0" prefWidth="34.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
+                  <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#decreaseValue" prefHeight="37.0" prefWidth="37.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
                      <HBox.margin>
                         <Insets left="88.0" right="10.0" />
                      </HBox.margin>
                      <font>
-                        <Font size="18.0" />
+                        <Font name="Chalkboard" size="18.0" />
                      </font>
                   </Button>
-                  <TextField fx:id="value" prefHeight="27.0" prefWidth="27.0" text="1">
+                  <TextField fx:id="value" alignment="CENTER" prefHeight="27.0" prefWidth="27.0" text="1">
                      <HBox.margin>
                         <Insets top="5.0" />
                      </HBox.margin>
                   </TextField>
-                  <Button mnemonicParsing="false" onMouseClicked="#increaseValue" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="+">
+                  <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#increaseValue" prefHeight="37.0" prefWidth="37.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="+">
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin>
                      <font>
-                        <Font size="18.0" />
+                        <Font name="Chalkboard" size="18.0" />
                      </font>
                   </Button>
                </children>
@@ -96,25 +99,25 @@
                         <Insets top="10.0" />
                      </HBox.margin>
                   </Text>
-                  <Button mnemonicParsing="false" onMouseClicked="#decreaseDistribution" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
+                  <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#decreaseDistribution" prefHeight="37.0" prefWidth="37.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
                      <HBox.margin>
                         <Insets left="23.0" top="10.0" />
                      </HBox.margin>
                      <font>
-                        <Font size="18.0" />
+                        <Font name="Chalkboard" size="18.0" />
                      </font>
                   </Button>
-                  <TextField fx:id="distribution" prefHeight="27.0" prefWidth="27.0" text="9">
+                  <TextField fx:id="distribution" alignment="CENTER" prefHeight="27.0" prefWidth="27.0" text="9">
                      <HBox.margin>
                         <Insets left="10.0" top="15.0" />
                      </HBox.margin>
                   </TextField>
-                  <Button mnemonicParsing="false" onMouseClicked="#increaseDistribution" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="+">
+                  <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#increaseDistribution" prefHeight="37.0" prefWidth="37.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="+">
                      <HBox.margin>
                         <Insets left="10.0" top="10.0" />
                      </HBox.margin>
                      <font>
-                        <Font size="18.0" />
+                        <Font name="Chalkboard" size="18.0" />
                      </font>
                   </Button>
                </children>
@@ -153,8 +156,11 @@
                      <HBox.margin>
                         <Insets top="10.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="Chalkboard" size="13.0" />
+                     </font>
                   </Label>
-                  <Button mnemonicParsing="false" onMouseClicked="#decreaseJoker" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
+                  <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#decreaseJoker" prefHeight="37.0" prefWidth="37.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
                      <font>
                         <Font name="Chalkboard" size="18.0" />
                      </font>
@@ -162,12 +168,15 @@
                         <Insets top="10.0" />
                      </HBox.margin>
                   </Button>
-                  <TextField fx:id="joker" prefHeight="27.0" prefWidth="27.0" text="2">
+                  <TextField fx:id="joker" alignment="CENTER" prefHeight="27.0" prefWidth="27.0" text="2">
                      <HBox.margin>
                         <Insets top="15.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="Chalkboard" size="13.0" />
+                     </font>
                   </TextField>
-                  <Button mnemonicParsing="false" onMouseClicked="#increaseJoker" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="+">
+                  <Button alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#increaseJoker" prefHeight="37.0" prefWidth="37.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="+">
                      <font>
                         <Font name="Chalkboard" size="18.0" />
                      </font>
