--- a/src/main/resources/views/exitGame.fxml
+++ b/src/main/resources/views/exitGame.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0"
-            prefWidth="300.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+            prefWidth="300.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
             fx:controller="gui.controllers.ExitGameController">
     <children>
         <VBox alignment="TOP_CENTER" maxHeight="200.0" maxWidth="100.0" minHeight="200.0" minWidth="100.0"
