--- a/src/main/resources/views/dictionaryError.fxml
+++ b/src/main/resources/views/dictionaryError.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="137.0" prefWidth="182.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.DictionaryErrorMessageController">
+<AnchorPane prefHeight="137.0" prefWidth="182.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="gui.controllers.DictionaryErrorMessageController">
    <children>
       <VBox prefHeight="169.0" prefWidth="183.0" style="-fx-background-color: #fbf8da #fbf8da #fbf8da #fbf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
