--- a/src/main/resources/views/statistics.fxml
+++ b/src/main/resources/views/statistics.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="402.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.StatisticsController">
+<AnchorPane prefHeight="402.0" prefWidth="288.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="gui.controllers.StatisticsController">
    <children>
       <VBox layoutX="100.0" layoutY="-1.0" prefHeight="403.0" prefWidth="288.0" style="-fx-background-color: #fbf8da #fbf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
          <children>
